test/bitwise2.slq

def main(){
	b:=1:𝔹;
	s:=1:int[16];
	u:=2:uint[16];
	sc:=1:!int[16];
	uc:=2:uint[16];
	bc:=1:!𝔹;
	n:=3:!ℕ;
	z:=-3:!ℤ;
	q:=1/2:!ℚ;
	r:=4.5:!ℝ;
	// c:=0:!ℂ;

	bandb:=b&b;
	(b&b):=bandb;
	bands:=b&s;
	(b&s):=bands;
	bandu:=b&u;
	(b&u):=bandu;
	bandsc:=b&sc;
	(b&sc):=bandsc;
	banduc:=b&uc;
	(b&uc):=banduc;
	bandbc:=b&bc;
	(b&bc):=bandbc;
	bandn:=b&n;
	(b&n):=bandn;
	bandz:=b&z;
	(b&z):=bandz;
	bandq:=b&q; // error
	(b&q):=bandq; // error
	bandr:=b&r; // error
	(b&r):=bandr; // error
	sandb:=s&b;
	(s&b):=sandb;
	sands:=s&s;
	(s&s):=sands;
	sandu:=s&u; // error
	(s&u):=sandu; // error
	sandsc:=s&sc;
	(s&sc):=sandsc;
	sanduc:=s&uc; // error
	(s&uc):=sanduc; // error
	sandbc:=s&bc;
	(s&bc):=sandbc;
	sandn:=s&n;
	(s&n):=sandn;
	sandz:=s&z;
	(s&z):=sandz;
	sandq:=s&q; // error
	(s&q):=sandq; // error
	sandr:=s&r; // error
	(s&r):=sandr; // error
	uandb:=u&b;
	(u&b):=uandb;
	uands:=u&s; // error
	(u&s):=uands; // error
	uandu:=u&u;
	(u&u):=uandu;
	uandsc:=u&sc; // error
	(u&sc):=uandsc; // error
	uanduc:=u&uc;
	(u&uc):=uanduc;
	uandbc:=u&bc;
	(u&bc):=uandbc;
	uandn:=u&n;
	(u&n):=uandn;
	uandz:=u&z;
	(u&z):=uandz;
	uandq:=u&q; // error
	(u&q):=uandq; // error
	uandr:=u&r; // error
	(u&r):=uandr; // error
	scandb:=sc&b;
	(sc&b):=scandb;
	scands:=sc&s;
	(sc&s):=scands;
	scandu:=sc&u; // error
	(sc&u):=scandu; // error
	scandsc:=sc&sc;
	(sc&sc):=scandsc;
	scanduc:=sc&uc; // error
	(sc&uc):=scanduc; // error
	scandbc:=sc&bc;
	(sc&bc):=scandbc;
	scandn:=sc&n;
	(sc&n):=scandn;
	scandz:=sc&z;
	(sc&z):=scandz;
	scandq:=sc&q; // error
	(sc&q):=scandq; // error
	scandr:=sc&r; // error
	(sc&r):=scandr; // error
	ucandb:=uc&b;
	(uc&b):=ucandb;
	ucands:=uc&s; // error
	(uc&s):=ucands; // error
	ucandu:=uc&u;
	(uc&u):=ucandu;
	ucandsc:=uc&sc; // error
	(uc&sc):=ucandsc; // error
	ucanduc:=uc&uc;
	(uc&uc):=ucanduc;
	ucandbc:=uc&bc;
	(uc&bc):=ucandbc;
	ucandn:=uc&n;
	(uc&n):=ucandn;
	ucandz:=uc&z;
	(uc&z):=ucandz;
	ucandq:=uc&q; // error
	(uc&q):=ucandq; // error
	ucandr:=uc&r; // error
	(uc&r):=ucandr; // error
	bcandb:=bc&b;
	(bc&b):=bcandb;
	bcands:=bc&s;
	(bc&s):=bcands;
	bcandu:=bc&u;
	(bc&u):=bcandu;
	bcandsc:=bc&sc;
	(bc&sc):=bcandsc;
	bcanduc:=bc&uc;
	(bc&uc):=bcanduc;
	bcandbc:=bc&bc;
	(bc&bc):=bcandbc;
	bcandn:=bc&n;
	(bc&n):=bcandn;
	bcandz:=bc&z;
	(bc&z):=bcandz;
	bcandq:=bc&q; // error
	(bc&q):=bcandq; // error
	bcandr:=bc&r; // error
	(bc&r):=bcandr; // error
	nandb:=n&b;
	(n&b):=nandb;
	nands:=n&s;
	(n&s):=nands;
	nandu:=n&u;
	(n&u):=nandu;
	nandsc:=n&sc;
	(n&sc):=nandsc;
	nanduc:=n&uc;
	(n&uc):=nanduc;
	nandbc:=n&bc;
	(n&bc):=nandbc;
	nandn:=n&n;
	(n&n):=nandn;
	nandz:=n&z;
	(n&z):=nandz;
	nandq:=n&q; // error
	(n&q):=nandq; // error
	nandr:=n&r; // error
	(n&r):=nandr; // error
	zandb:=z&b;
	(z&b):=zandb;
	zands:=z&s;
	(z&s):=zands;
	zandu:=z&u;
	(z&u):=zandu;
	zandsc:=z&sc;
	(z&sc):=zandsc;
	zanduc:=z&uc;
	(z&uc):=zanduc;
	zandbc:=z&bc;
	(z&bc):=zandbc;
	zandn:=z&n;
	(z&n):=zandn;
	zandz:=z&z;
	(z&z):=zandz;
	zandq:=z&q; // error
	(z&q):=zandq; // error
	zandr:=z&r; // error
	(z&r):=zandr; // error
	qandb:=q&b; // error
	(q&b):=qandb; // error
	qands:=q&s; // error
	(q&s):=qands; // error
	qandu:=q&u; // error
	(q&u):=qandu; // error
	qandsc:=q&sc; // error
	(q&sc):=qandsc; // error
	qanduc:=q&uc; // error
	(q&uc):=qanduc; // error
	qandbc:=q&bc; // error
	(q&bc):=qandbc; // error
	qandn:=q&n; // error
	(q&n):=qandn; // error
	qandz:=q&z; // error
	(q&z):=qandz; // error
	qandq:=q&q; // error
	(q&q):=qandq; // error
	qandr:=q&r; // error
	(q&r):=qandr; // error
	randb:=r&b; // error
	(r&b):=randb; // error
	rands:=r&s; // error
	(r&s):=rands; // error
	randu:=r&u; // error
	(r&u):=randu; // error
	randsc:=r&sc; // error
	(r&sc):=randsc; // error
	randuc:=r&uc; // error
	(r&uc):=randuc; // error
	randbc:=r&bc; // error
	(r&bc):=randbc; // error
	randn:=r&n; // error
	(r&n):=randn; // error
	randz:=r&z; // error
	(r&z):=randz; // error
	randq:=r&q; // error
	(r&q):=randq; // error
	randr:=r&r; // error
	(r&r):=randr; // error
	borb:=b|b;
	(b|b):=borb;
	bors:=b|s;
	(b|s):=bors;
	boru:=b|u;
	(b|u):=boru;
	borsc:=b|sc;
	(b|sc):=borsc;
	boruc:=b|uc;
	(b|uc):=boruc;
	borbc:=b|bc;
	(b|bc):=borbc;
	born:=b|n; // error
	(b|n):=born; // error
	borz:=b|z; // error
	(b|z):=borz; // error
	borq:=b|q; // error
	(b|q):=borq; // error
	borr:=b|r; // error
	(b|r):=borr; // error
	sorb:=s|b;
	(s|b):=sorb;
	sors:=s|s;
	(s|s):=sors;
	soru:=s|u; // error
	(s|u):=soru; // error
	sorsc:=s|sc;
	(s|sc):=sorsc;
	soruc:=s|uc; // error
	(s|uc):=soruc; // error
	sorbc:=s|bc;
	(s|bc):=sorbc;
	sorn:=s|n;
	(s|n):=sorn;
	sorz:=s|z;
	(s|z):=sorz;
	sorq:=s|q; // error
	(s|q):=sorq; // error
	sorr:=s|r; // error
	(s|r):=sorr; // error
	uorb:=u|b;
	(u|b):=uorb;
	uors:=u|s; // error
	(u|s):=uors; // error
	uoru:=u|u;
	(u|u):=uoru;
	uorsc:=u|sc; // error
	(u|sc):=uorsc; // error
	uoruc:=u|uc;
	(u|uc):=uoruc;
	uorbc:=u|bc;
	(u|bc):=uorbc;
	uorn:=u|n;
	(u|n):=uorn;
	uorz:=u|z;
	(u|z):=uorz;
	uorq:=u|q; // error
	(u|q):=uorq; // error
	uorr:=u|r; // error
	(u|r):=uorr; // error
	scorb:=sc|b;
	(sc|b):=scorb;
	scors:=sc|s;
	(sc|s):=scors;
	scoru:=sc|u; // error
	(sc|u):=scoru; // error
	scorsc:=sc|sc;
	(sc|sc):=scorsc;
	scoruc:=sc|uc; // error
	(sc|uc):=scoruc; // error
	scorbc:=sc|bc;
	(sc|bc):=scorbc;
	scorn:=sc|n;
	(sc|n):=scorn;
	scorz:=sc|z;
	(sc|z):=scorz;
	scorq:=sc|q; // error
	(sc|q):=scorq; // error
	scorr:=sc|r; // error
	(sc|r):=scorr; // error
	ucorb:=uc|b;
	(uc|b):=ucorb;
	ucors:=uc|s; // error
	(uc|s):=ucors; // error
	ucoru:=uc|u;
	(uc|u):=ucoru;
	ucorsc:=uc|sc; // error
	(uc|sc):=ucorsc; // error
	ucoruc:=uc|uc;
	(uc|uc):=ucoruc;
	ucorbc:=uc|bc;
	(uc|bc):=ucorbc;
	ucorn:=uc|n;
	(uc|n):=ucorn;
	ucorz:=uc|z;
	(uc|z):=ucorz;
	ucorq:=uc|q; // error
	(uc|q):=ucorq; // error
	ucorr:=uc|r; // error
	(uc|r):=ucorr; // error
	bcorb:=bc|b;
	(bc|b):=bcorb;
	bcors:=bc|s;
	(bc|s):=bcors;
	bcoru:=bc|u;
	(bc|u):=bcoru;
	bcorsc:=bc|sc;
	(bc|sc):=bcorsc;
	bcoruc:=bc|uc;
	(bc|uc):=bcoruc;
	bcorbc:=bc|bc;
	(bc|bc):=bcorbc;
	bcorn:=bc|n;
	(bc|n):=bcorn;
	bcorz:=bc|z;
	(bc|z):=bcorz;
	bcorq:=bc|q; // error
	(bc|q):=bcorq; // error
	bcorr:=bc|r; // error
	(bc|r):=bcorr; // error
	norb:=n|b; // error
	(n|b):=norb; // error
	nors:=n|s;
	(n|s):=nors;
	noru:=n|u;
	(n|u):=noru;
	norsc:=n|sc;
	(n|sc):=norsc;
	noruc:=n|uc;
	(n|uc):=noruc;
	norbc:=n|bc;
	(n|bc):=norbc;
	norn:=n|n;
	(n|n):=norn;
	norz:=n|z;
	(n|z):=norz;
	norq:=n|q; // error
	(n|q):=norq; // error
	norr:=n|r; // error
	(n|r):=norr; // error
	zorb:=z|b; // error
	(z|b):=zorb; // error
	zors:=z|s;
	(z|s):=zors;
	zoru:=z|u;
	(z|u):=zoru;
	zorsc:=z|sc;
	(z|sc):=zorsc;
	zoruc:=z|uc;
	(z|uc):=zoruc;
	zorbc:=z|bc;
	(z|bc):=zorbc;
	zorn:=z|n;
	(z|n):=zorn;
	zorz:=z|z;
	(z|z):=zorz;
	zorq:=z|q; // error
	(z|q):=zorq; // error
	zorr:=z|r; // error
	(z|r):=zorr; // error
	qorb:=q|b; // error
	(q|b):=qorb; // error
	qors:=q|s; // error
	(q|s):=qors; // error
	qoru:=q|u; // error
	(q|u):=qoru; // error
	qorsc:=q|sc; // error
	(q|sc):=qorsc; // error
	qoruc:=q|uc; // error
	(q|uc):=qoruc; // error
	qorbc:=q|bc; // error
	(q|bc):=qorbc; // error
	qorn:=q|n; // error
	(q|n):=qorn; // error
	qorz:=q|z; // error
	(q|z):=qorz; // error
	qorq:=q|q; // error
	(q|q):=qorq; // error
	qorr:=q|r; // error
	(q|r):=qorr; // error
	rorb:=r|b; // error
	(r|b):=rorb; // error
	rors:=r|s; // error
	(r|s):=rors; // error
	roru:=r|u; // error
	(r|u):=roru; // error
	rorsc:=r|sc; // error
	(r|sc):=rorsc; // error
	roruc:=r|uc; // error
	(r|uc):=roruc; // error
	rorbc:=r|bc; // error
	(r|bc):=rorbc; // error
	rorn:=r|n; // error
	(r|n):=rorn; // error
	rorz:=r|z; // error
	(r|z):=rorz; // error
	rorq:=r|q; // error
	(r|q):=rorq; // error
	rorr:=r|r; // error
	(r|r):=rorr; // error
	bxorb:=b⊕b;
	(b⊕b):=bxorb;
	bxors:=b⊕s;
	(b⊕s):=bxors;
	bxoru:=b⊕u;
	(b⊕u):=bxoru;
	bxorsc:=b⊕sc;
	(b⊕sc):=bxorsc; 
	bxoruc:=b⊕uc;
	(b⊕uc):=bxoruc;
	bxorbc:=b⊕bc;
	(b⊕bc):=bxorbc;
	bxorn:=b⊕n; // error
	(b⊕n):=bxorn; // error
	bxorz:=b⊕z; // error
	(b⊕z):=bxorz; // error
	bxorq:=b⊕q; // error
	(b⊕q):=bxorq; // error
	bxorr:=b⊕r; // error
	(b⊕r):=bxorr; // error
	sxorb:=s⊕b;
	(s⊕b):=sxorb;
	sxors:=s⊕s;
	(s⊕s):=sxors;
	sxoru:=s⊕u; // error
	(s⊕u):=sxoru; // error
	sxorsc:=s⊕sc;
	(s⊕sc):=sxorsc;
	sxoruc:=s⊕uc; // error
	(s⊕uc):=sxoruc; // error
	sxorbc:=s⊕bc;
	(s⊕bc):=sxorbc;
	sxorn:=s⊕n;
	(s⊕n):=sxorn;
	sxorz:=s⊕z;
	(s⊕z):=sxorz;
	sxorq:=s⊕q; // error
	(s⊕q):=sxorq; // error
	sxorr:=s⊕r; // error
	(s⊕r):=sxorr; // error
	uxorb:=u⊕b;
	(u⊕b):=uxorb;
	uxors:=u⊕s; // error
	(u⊕s):=uxors; // error
	uxoru:=u⊕u;
	(u⊕u):=uxoru;
	uxorsc:=u⊕sc; // error
	(u⊕sc):=uxorsc; // error
	uxoruc:=u⊕uc;
	(u⊕uc):=uxoruc;
	uxorbc:=u⊕bc;
	(u⊕bc):=uxorbc;
	uxorn:=u⊕n;
	(u⊕n):=uxorn;
	uxorz:=u⊕z;
	(u⊕z):=uxorz;
	uxorq:=u⊕q; // error
	(u⊕q):=uxorq; // error
	uxorr:=u⊕r; // error
	(u⊕r):=uxorr; // error
	scxorb:=sc⊕b;
	(sc⊕b):=scxorb;
	scxors:=sc⊕s;
	(sc⊕s):=scxors;
	scxoru:=sc⊕u; // error
	(sc⊕u):=scxoru; // error
	scxorsc:=sc⊕sc;
	(sc⊕sc):=scxorsc;
	scxoruc:=sc⊕uc; // error
	(sc⊕uc):=scxoruc; // error
	scxorbc:=sc⊕bc;
	(sc⊕bc):=scxorbc;
	scxorn:=sc⊕n;
	(sc⊕n):=scxorn;
	scxorz:=sc⊕z;
	(sc⊕z):=scxorz;
	scxorq:=sc⊕q; // error
	(sc⊕q):=scxorq; // error
	scxorr:=sc⊕r; // error
	(sc⊕r):=scxorr; // error
	ucxorb:=uc⊕b;
	(uc⊕b):=ucxorb;
	ucxors:=uc⊕s; // error
	(uc⊕s):=ucxors; // error
	ucxoru:=uc⊕u;
	(uc⊕u):=ucxoru;
	ucxorsc:=uc⊕sc; // error
	(uc⊕sc):=ucxorsc; // error
	ucxoruc:=uc⊕uc;
	(uc⊕uc):=ucxoruc;
	ucxorbc:=uc⊕bc;
	(uc⊕bc):=ucxorbc;
	ucxorn:=uc⊕n;
	(uc⊕n):=ucxorn;
	ucxorz:=uc⊕z;
	(uc⊕z):=ucxorz;
	ucxorq:=uc⊕q; // error
	(uc⊕q):=ucxorq; // error
	ucxorr:=uc⊕r; // error
	(uc⊕r):=ucxorr; // error
	bcxorb:=bc⊕b;
	(bc⊕b):=bcxorb;
	bcxors:=bc⊕s;
	(bc⊕s):=bcxors;
	bcxoru:=bc⊕u;
	(bc⊕u):=bcxoru;
	bcxorsc:=bc⊕sc;
	(bc⊕sc):=bcxorsc;
	bcxoruc:=bc⊕uc;
	(bc⊕uc):=bcxoruc;
	bcxorbc:=bc⊕bc;
	(bc⊕bc):=bcxorbc;
	bcxorn:=bc⊕n;
	(bc⊕n):=bcxorn;
	bcxorz:=bc⊕z;
	(bc⊕z):=bcxorz;
	bcxorq:=bc⊕q; // error
	(bc⊕q):=bcxorq; // error
	bcxorr:=bc⊕r; // error
	(bc⊕r):=bcxorr; // error
	nxorb:=n⊕b; // error
	(n⊕b):=nxorb; // error
	nxors:=n⊕s;
	(n⊕s):=nxors;
	nxoru:=n⊕u;
	(n⊕u):=nxoru;
	nxorsc:=n⊕sc;
	(n⊕sc):=nxorsc;
	nxoruc:=n⊕uc;
	(n⊕uc):=nxoruc;
	nxorbc:=n⊕bc;
	(n⊕bc):=nxorbc;
	nxorn:=n⊕n;
	(n⊕n):=nxorn;
	nxorz:=n⊕z;
	(n⊕z):=nxorz;
	nxorq:=n⊕q; // error
	(n⊕q):=nxorq; // error
	nxorr:=n⊕r; // error
	(n⊕r):=nxorr; // error
	zxorb:=z⊕b; // error
	(z⊕b):=zxorb; // error
	zxors:=z⊕s;
	(z⊕s):=zxors;
	zxoru:=z⊕u;
	(z⊕u):=zxoru;
	zxorsc:=z⊕sc;
	(z⊕sc):=zxorsc;
	zxoruc:=z⊕uc;
	(z⊕uc):=zxoruc;
	zxorbc:=z⊕bc;
	(z⊕bc):=zxorbc;
	zxorn:=z⊕n;
	(z⊕n):=zxorn;
	zxorz:=z⊕z;
	(z⊕z):=zxorz;
	zxorq:=z⊕q; // error
	(z⊕q):=zxorq; // error
	zxorr:=z⊕r; // error
	(z⊕r):=zxorr; // error
	qxorb:=q⊕b; // error
	(q⊕b):=qxorb; // error
	qxors:=q⊕s; // error
	(q⊕s):=qxors; // error
	qxoru:=q⊕u; // error
	(q⊕u):=qxoru; // error
	qxorsc:=q⊕sc; // error
	(q⊕sc):=qxorsc; // error
	qxoruc:=q⊕uc; // error
	(q⊕uc):=qxoruc; // error
	qxorbc:=q⊕bc; // error
	(q⊕bc):=qxorbc; // error
	qxorn:=q⊕n; // error
	(q⊕n):=qxorn; // error
	qxorz:=q⊕z; // error
	(q⊕z):=qxorz; // error
	qxorq:=q⊕q; // error
	(q⊕q):=qxorq; // error
	qxorr:=q⊕r; // error
	(q⊕r):=qxorr; // error
	rxorb:=r⊕b; // error
	(r⊕b):=rxorb; // error
	rxors:=r⊕s; // error
	(r⊕s):=rxors; // error
	rxoru:=r⊕u; // error
	(r⊕u):=rxoru; // error
	rxorsc:=r⊕sc; // error
	(r⊕sc):=rxorsc; // error
	rxoruc:=r⊕uc; // error
	(r⊕uc):=rxoruc; // error
	rxorbc:=r⊕bc; // error
	(r⊕bc):=rxorbc; // error
	rxorn:=r⊕n; // error
	(r⊕n):=rxorn; // error
	rxorz:=r⊕z; // error
	(r⊕z):=rxorz; // error
	rxorq:=r⊕q; // error
	(r⊕q):=rxorq; // error
	rxorr:=r⊕r; // error
	(r⊕r):=rxorr; // error
}
